# abstract_gym_2

./: CMakeLists.txt  LICENSE  README.md  complie.sh  gym.cpp  gym.h  gym2.cpp  gym3.cpp
RL/: TransfromerEncoder.py  dataloader.py  inference.py  online_policy.py  policy.py  pseudo_policy.py  redis_interface.py  ringbuffer.py  train.py  zmq_class.py
RL/models/: q3_net_best.pth
config/: env_conf.txt
datatype/: compile_datatype.sh  robot_data.pb.cc  robot_data.pb.h  robot_data.proto  robot_data_pb2.py
robot/: TwoJointRobot.cpp  TwoJointRobot.h  two_joint_robot.cpp  two_joint_robot.h
tests/: CMakeLists.txt  collision_test.cpp  env_test.cpp  geo_test.cpp  geo_unit_test.cpp  random_robot_data_generator.cpp
utils/: collision_check.h  collision_detector.h  geometry.h  redis_dataframe_manager.h  zmq_class.h
viz/: viz.cpp  viz.h
